Doggy Challenge stack) Boot, JPA, H2 DB

--- a/src/main/resources/static/css/mycss.css
+++ b/src/main/resources/static/css/mycss.css
@@ -62,12 +62,8 @@ h3{
 .bg-blue{
   background-color: aqua;
 }
-.bg-doge{
- background-image: url(/images/doge.svg); 
- background-position: 
-    center;
- background-repeat: no-repeat;
- background-size: 50%;
+.bg-olive{
+ background-color: #808000;
 }
 
 ul{
