Doggy Challenge stack) Boot, JPA, H2 DB

--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -18,12 +18,11 @@
 <div class="container">
     <h1>회원 가입</h1>
 
-    <form th:action="@{/login}" th:object="${loginDTO}" method="post">
+    <form th:action="/login" th:object="${LoginDTO}" method="post">
         <!-- Add hidden form field to handle update -->
-        <input type="hidden" th:field="*{id}" />
         <div>
             <label>ID</label>
-            <input type="text" th:field="*{dateField}" placeholder="아이디" />
+            <input type="text" th:field="*{loginId}" placeholder="아이디" />
 <!--            <input type="text" th:field="*{dateField}" th:class="${#fields.hasErrors('dateField')}? fieldError" />-->
 <!--            <input type="text" th:field="*{dateField}" class="form-input" th:errorclass="error" />-->
 
@@ -31,10 +30,10 @@
         </div>
         <div>
             <label>PASSWORD</label>
-            <input type="password" th:field="*{password}" placeholder="비밀번호">
+            <input type="password" th:field="*{loginPw}" placeholder="비밀번호">
         </div>
         <input class="btn btn-primary btn-md" type="submit" value="로그인">
-        <input class="btn btn-gray btn-md" type="button" href="@{/}" value="홈으로 돌아가기">
+        <input class="btn btn-gray btn-md" type="button" onclick="location.href='/'" value="홈으로 돌아가기">
     </form>
 
 </body>
