--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -18,12 +18,12 @@
 <div class="container">
     <h1>회원 가입</h1>
 
-    <form th:action="/login" th:object="${LoginDTO}" method="post">
+    <form th:action="@{/login}" th:object="${LoginDTO}" method="post">
         <!-- Add hidden form field to handle update -->
         <div>
             <label>ID</label>
             <input type="text" th:field="*{loginId}" placeholder="아이디" />
-<!--            <input type="text" th:field="*{dateField}" th:class="${#fields.hasErrors('dateField')}? fieldError" />-->
+            <p th:field="*{loginId}" th:class="${#fields.hasErrors('dateField')}? fieldError" />
 <!--            <input type="text" th:field="*{dateField}" class="form-input" th:errorclass="error" />-->
 
 <!--            <p th:each="error : ${#fields.errors('dateField')}" th:text="${error}"></p>-->
