--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,35 +17,57 @@
 
 </div>
 
-<div th:fragment="nav-bar">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div th:fragment="nav-header">
+    <nav class="bd-header navbar navbar-expand-sm navbar-light bg-light">
         <div class="container-fluid">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">게시판</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <form class="d-inline-flex">
-                    <input class="form-control me-2" type="search" placeholder="검색" aria-label="검색">
-                    <button class="btn btn-outline-dark" type="submit">검색</button>
-                </form>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"
+                    th:href="@{/}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" th:href="@{/board/list}">게시판</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        Dropdown
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#" th:href="@{/login}">로그인</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#" th:href="@{/logout}">로그아웃</a>
+                </li>
+            </ul>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="검색" aria-label="검색">
+                <button class="btn btn-outline-dark" type="submit" style="width:35%">검색</button>
+            </form>
         </div>
     </nav>
 </div>
+
+<div th:fragment="left-bar" id="sidebar-wrapper" class="bg-dark text-white" >
+    <div class="pt-4">To Do list</div>
+    <hr style="opacity: 100%" class="mb-0">
+    <table class="table text-white" style="font-size: smaller">
+        <tr class="tr-hover" onclick="location.href='/'">
+            <td>1</td>
+            <td class="td-title">게시판 만들기</td>
+            <td class="td-member">park</td>
+        </tr>
+    </table>
+
+
+</div>
+
